--- a/index.html
+++ b/index.html
@@ -42,5 +42,54 @@
             </div>
         </div>
     </section>
+    <section class="area1">
+        <div class="area1-info">
+            <h2>Four drinks, a million reasons</h2>
+            <q>"Lorem ipsum dolor sit amet" - Lady Gaga</q>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorem impedit numquam, consequuntur iure vel saepe unde tempore sunt eum commodi, harum rem, facere nihil dolores libero! Esse error doloremque ipsum!
+            Alias deleniti consectetur qui enim tenetur tempora laudantium dolorem veritatis adipisci! Voluptas blanditiis beatae iure incidunt asperiores ab laboriosam neque voluptatibus enim consequuntur reiciendis, ipsum sunt nam hic, aspernatur eaque?</p>
+            <button class="button">Learn More</button>
+        </div>
+        <div class="img1"></div>
+        <div class="img2"></div>
+    </section>
+    <section class="area2">
+        <div class="area2-info">
+            <h2>INtroducing Vanila Stweet Cream Cold Brew--Sweet,Creamy,Cold,Bold</h2>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorem impedit numquam, consequuntur iure vel saepe unde tempore sunt eum commodi, harum rem, facere nihil dolores libero! Esse error doloremque ipsum!
+            Alias deleniti consectetur qui enim tenetur tempora laudantium dolorem veritatis adipisci! Voluptas blanditiis beatae iure incidunt asperiores ab laboriosam neque voluptatibus enim consequuntur reiciendis, ipsum sunt nam hic, aspernatur eaque?</p>
+            <button class="button">Learn More</button>
+        </div>
+        <div class="img1"></div>
+        <div class="img2"></div>
+    </section>
+    <section class="area3">
+        <div class="area3-info">
+            <h2>The new ultra caramel frappucino is here</h2>
+            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Aliquam accusamus hic quasi exercitationem corrupti veniam, recusandae, incidunt vel eveniet ullam fugit repellat dolore! Asperiores voluptate nam tempora amet velit sed.
+            Laborum doloremque doloribus magni sapiente debitis temporibus inventore iusto, soluta blanditiis quia, ipsa architecto incidunt consequatur quidem nam earum eaque. Harum nostrum sapiente mollitia dolorem facere modi repudiandae enim voluptas?</p>
+            <button class="button">Learn More</button>
+        </div>
+        <div class="area3-img"></div>
+    </section>
+    <section class="area4">
+        <div class="area4-info">
+            <div class="bar">
+                <h2>Kindness Starts With One</h2>
+                </h2>
+            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Aliquam accusamus hic quasi exercitationem corrupti veniam, recusandae, incidunt vel eveniet ullam fugit repellat dolore! Asperiores voluptate nam tempora amet velit sed.
+            Laborum doloremque doloribus magni sapiente debitis temporibus inventore iusto, soluta blanditiis quia, ipsa architecto incidunt consequatur quidem nam earum eaque. Harum nostrum sapiente mollitia dolorem facere modi repudiandae enim voluptas?</p>
+            <button class="button">Learn More</button>
+            </div>
+        </div>
+        <div class="area4-img"></div>
+    </section>
+    <section class="area5">
+
+    </section>
+    <footer>
+        criado com amor pela instituição dos cafezinhos <br>
+        creditos do layout para o nicepage
+    </footer>
 </body>
 </html>
